Исправление формата файлов

--- a/script/template/install.env.template
+++ b/script/template/install.env.template
@@ -1,3 +1,4 @@
+#!/bin/bash
 #---------------------------------------------------
 #   Шаблон переменных окружения для установки
 #   Environment variables template for install script
