--- a/script/template/docker.env.template
+++ b/script/template/docker.env.template
@@ -1,3 +1,4 @@
+#!/bin/bash
 #-------------------------------------------------------------------------------#
 #   Переменные окружения для docker-compose                                     #
 #   Environment variables for docker-compose                                    #
