--- a/docker-proxy/compose.d/10-adguard.yml
+++ b/docker-proxy/compose.d/10-adguard.yml
@@ -16,6 +16,7 @@ services:
       - /opt/docker-proxy/adguard/work:/opt/adguardhome/work
       - /opt/docker-proxy/adguard/conf:/opt/adguardhome/conf
       - /opt/docker-proxy/adguard/update-pass.sh:/opt/adguardhome/update-pass.sh:ro
+      - /opt/docker-proxy/traefik/pem:/opt/adguardhome/pem:ro
     env_file:
       - /opt/docker-proxy/.env
     security_opt:
