Добавление ограничений на права доступа к файлу acme.json и исправление конфигурации зависимостей для traefik-acme-exporter.

--- a/docker-proxy/compose.d/06-traefik-pem-export.yml
+++ b/docker-proxy/compose.d/06-traefik-pem-export.yml
@@ -3,9 +3,9 @@ services:
     image: alpine:latest
     container_name: traefik-acme-exporter
     restart: unless-stopped
-    depends_on:
-      - traefik
-
+    security_opt:
+      - no-new-privileges=true
+      
     volumes:
       - /opt/docker-proxy/traefik/acme.json:/acme.json:ro
       - /opt/docker-proxy/traefik/pem:/export
