Обновление конфигурации Docker: изменение параметров памяти для lampac tmpfs, добавление новых настроек кэширования и управления памятью в init.conf для lampac.

--- a/docker-proxy/compose.d/00-base.yml
+++ b/docker-proxy/compose.d/00-base.yml
@@ -23,4 +23,5 @@ volumes:
     driver_opts:
       type: tmpfs
       device: tmpfs
-      o: size=5g
+      o: size=1g,uid=1000,gid=1000,mode=0750,noatime,nosuid,nodev,noexec,nr_inodes=200000
+  
