--- a/docker-proxy/lampac/home/init.conf
+++ b/docker-proxy/lampac/home/init.conf
@@ -88,6 +88,17 @@
     "enable": true
   },
   "multiaccess": true,
-  "playerInner": "C:\\Program Files\\VideoLAN\\VLC\\vlc.exe",
+  "cache": {  
+    "type": "mem"  
+  },  
+  "GC": {
+    "ConserveMemory": 9,  
+    "HighMemoryPercent": 1  
+  },  
+  "fileCacheInactive": {  
+    "hls": 30,  
+    "html": 3,  
+    "torrent": 720  
+  },
   "corsehost": "http://cors.apn.monster"
 }
