--- a/docker-proxy/compose.d/06-traefik.yml
+++ b/docker-proxy/compose.d/06-traefik.yml
@@ -16,7 +16,7 @@ services:
       - /var/run/docker.sock:/var/run/docker.sock:ro
       - /opt/docker-proxy/traefik/traefik.yml:/etc/traefik/traefik.yml:ro
       - /opt/docker-proxy/traefik/acme.json:/acme.json
-      - /opt/docker-proxy/traefik/dynamic:/templates:ro
+      - /opt/docker-proxy/traefik/dynamic:/dynamic:ro
       - /opt/docker-proxy/_logs/traefik:/logs
     ports:
       - "80:80"
@@ -43,50 +43,63 @@ services:
       - traefik.docker.network=traefik-proxy
       - traefik.tags=traefik
 
-      # Basic Auth
+      # ---------- Basic Auth ----------
+      # Авторизация для доступа к dashboard/metrics/ping
       - traefik.http.middlewares.basic-auth.basicauth.realm=Basic Authentication
       - traefik.http.middlewares.basic-auth.basicauth.users=${HT_PASS_ENCODED}
 
-      # Базовые middlewares
+      # ---------- Базовые middleware ----------
+      # Сжатие
       - traefik.http.middlewares.compress.compress=true
 
+      # Лимитирование запросов
       - traefik.http.middlewares.rate-limit.ratelimit.average=50
       - traefik.http.middlewares.rate-limit.ratelimit.burst=100
 
-      - traefik.http.middlewares.secured-chain.chain.middlewares=crowdsec-bouncer,rate-limit,compress
+      # Основная защищённая цепочка
+      - traefik.http.middlewares.secured-chain.chain.middlewares=bouncer@file,rate-limit,compress
 
+      # API-цепочка без auth
       - traefik.http.middlewares.api-chain.chain.middlewares=rate-limit,compress
 
+      # Статические файлы — только compress
       - traefik.http.middlewares.static-chain.chain.middlewares=compress
 
-      # Мониторинг Traefik (metrics/health/ping) за basic-auth
+      # ---------- Мониторинг Traefik ----------
+      # Метрики под Basic Auth
       - traefik.http.routers.traefik-metrics.rule=Host(`${WEBDOMAIN}`) && Path(`/metrics`)
       - traefik.http.routers.traefik-metrics.entrypoints=websecure
       - traefik.http.routers.traefik-metrics.middlewares=basic-auth
       - traefik.http.routers.traefik-metrics.service=api@internal
       - traefik.http.routers.traefik-metrics.tls.certresolver=le
 
+      # Healthcheck (без auth)
       - traefik.http.routers.traefik-health.rule=Host(`${WEBDOMAIN}`) && Path(`/health`)
       - traefik.http.routers.traefik-health.entrypoints=websecure
       - traefik.http.routers.traefik-health.service=api@internal
       - traefik.http.routers.traefik-health.tls.certresolver=le
 
+      # Ping endpoint (без auth)
       - traefik.http.routers.traefik-ping.rule=Host(`${WEBDOMAIN}`) && Path(`/ping`)
       - traefik.http.routers.traefik-ping.entrypoints=websecure
       - traefik.http.routers.traefik-ping.service=api@internal
       - traefik.http.routers.traefik-ping.tls.certresolver=le
 
-      # Dashboard: цепочки редиректов, переписывание /api и приоритеты (manifest>prefixed>api>root>redirect)
+      # ---------- Dashboard: редиректы, API, UI ----------
+      # Удаление префикса /${URI_TRAEFIK_DASHBOARD}
       - traefik.http.middlewares.dash-strip-prefix.stripPrefix.prefixes=/${URI_TRAEFIK_DASHBOARD}
 
+      # Редирект с /dashboard → /${URI_TRAEFIK_DASHBOARD}/dashboard
       - traefik.http.middlewares.dash-redirect-to-prefixed.redirectRegex.regex=^/dashboard(.*)$
       - traefik.http.middlewares.dash-redirect-to-prefixed.redirectRegex.replacement=/${URI_TRAEFIK_DASHBOARD}/dashboard$1
       - traefik.http.middlewares.dash-redirect-to-prefixed.redirectRegex.permanent=true
 
+      # Редирект с /${URI_TRAEFIK_DASHBOARD}/ → UI
       - traefik.http.middlewares.dash-redirect-root.redirectRegex.regex=^/${URI_TRAEFIK_DASHBOARD}/?$
       - traefik.http.middlewares.dash-redirect-root.redirectRegex.replacement=/${URI_TRAEFIK_DASHBOARD}/dashboard/
       - traefik.http.middlewares.dash-redirect-root.redirectRegex.permanent=true
 
+      # Перехват root /dashboard
       - traefik.http.routers.traefik-dashboard-redirect.rule=Host(`${WEBDOMAIN}`) && PathPrefix(`/dashboard`)
       - traefik.http.routers.traefik-dashboard-redirect.entrypoints=websecure
       - traefik.http.routers.traefik-dashboard-redirect.middlewares=dash-redirect-to-prefixed
@@ -94,6 +107,7 @@ services:
       - traefik.http.routers.traefik-dashboard-redirect.tls.certresolver=le
       - traefik.http.routers.traefik-dashboard-redirect.priority=90
 
+      # Корневой путь /${URI_TRAEFIK_DASHBOARD} → UI
       - traefik.http.routers.traefik-dashboard-root-to-ui.rule=Host(`${WEBDOMAIN}`) && (Path(`/${URI_TRAEFIK_DASHBOARD}`) || Path(`/${URI_TRAEFIK_DASHBOARD}/`))
       - traefik.http.routers.traefik-dashboard-root-to-ui.entrypoints=websecure
       - traefik.http.routers.traefik-dashboard-root-to-ui.middlewares=dash-redirect-root
@@ -101,47 +115,51 @@ services:
       - traefik.http.routers.traefik-dashboard-root-to-ui.tls.certresolver=le
       - traefik.http.routers.traefik-dashboard-root-to-ui.priority=100
 
+      # Перезапись абсолютных /api внутри Dashboard
       - traefik.http.middlewares.dash-api-rewrite.plugin.fullUrlRewrite.regex=^https?://([^/]+)/api/(.*)
       - traefik.http.middlewares.dash-api-rewrite.plugin.fullUrlRewrite.replacement=https://$1/${URI_TRAEFIK_DASHBOARD}/api/$2
-      
+
+      # Абсолютный /api (до удаления префикса)
       - traefik.http.routers.traefik-dashboard-api-absolute.rule=Host(`${WEBDOMAIN}`) && PathPrefix(`/api`)
       - traefik.http.routers.traefik-dashboard-api-absolute.entrypoints=websecure
       - traefik.http.routers.traefik-dashboard-api-absolute.middlewares=dash-api-rewrite,basic-auth
       - traefik.http.routers.traefik-dashboard-api-absolute.service=api@internal
       - traefik.http.routers.traefik-dashboard-api-absolute.tls.certresolver=le
       - traefik.http.routers.traefik-dashboard-api-absolute.priority=120
-      
+
+      # Основной UI и API под префиксом
       - traefik.http.routers.traefik-dashboard-prefixed.rule=Host(`${WEBDOMAIN}`) && (PathPrefix(`/${URI_TRAEFIK_DASHBOARD}/dashboard`) || PathPrefix(`/${URI_TRAEFIK_DASHBOARD}/api`))
       - traefik.http.routers.traefik-dashboard-prefixed.entrypoints=websecure
       - traefik.http.routers.traefik-dashboard-prefixed.middlewares=dash-strip-prefix,basic-auth
       - traefik.http.routers.traefik-dashboard-prefixed.service=api@internal
       - traefik.http.routers.traefik-dashboard-prefixed.tls.certresolver=le
       - traefik.http.routers.traefik-dashboard-prefixed.priority=140
-      
+
+      # Manifest.json Dashboard
       - traefik.http.routers.traefik-dashboard-manifest.rule=Host(`${WEBDOMAIN}`) && Path(`/${URI_TRAEFIK_DASHBOARD}/dashboard/manifest.json`)
       - traefik.http.routers.traefik-dashboard-manifest.entrypoints=websecure
       - traefik.http.routers.traefik-dashboard-manifest.service=api@internal
       - traefik.http.routers.traefik-dashboard-manifest.tls.certresolver=le
       - traefik.http.routers.traefik-dashboard-manifest.priority=150
 
-      # CROWDSEC BOUNCER
-      - traefik.http.middlewares.crowdsec-bouncer.plugin.bouncer.enabled=true
-      - traefik.http.middlewares.crowdsec-bouncer.plugin.bouncer.mode=live
-      - traefik.http.middlewares.crowdsec-bouncer.plugin.bouncer.logLevel=INFO
-      - traefik.http.middlewares.crowdsec-bouncer.plugin.bouncer.updateIntervalSeconds=10
-      - traefik.http.middlewares.crowdsec-bouncer.plugin.bouncer.updateMaxFailure=3
-      - traefik.http.middlewares.crowdsec-bouncer.plugin.bouncer.defaultDecisionSeconds=10
-      - traefik.http.middlewares.crowdsec-bouncer.plugin.bouncer.httpTimeoutSeconds=5
-      - traefik.http.middlewares.crowdsec-bouncer.plugin.bouncer.crowdsecMode=stream
-      - traefik.http.middlewares.crowdsec-bouncer.plugin.bouncer.crowdsecAppsecEnabled=true
-      - traefik.http.middlewares.crowdsec-bouncer.plugin.bouncer.crowdsecAppsecFailureBlock=true
-      - traefik.http.middlewares.crowdsec-bouncer.plugin.bouncer.crowdsecAppsecUnreachableBlock=false
-      - traefik.http.middlewares.crowdsec-bouncer.plugin.bouncer.crowdsecAppsecHost=crowdsec:7422
-      - traefik.http.middlewares.crowdsec-bouncer.plugin.bouncer.crowdsecLapiKey=${CROWDSEC_API_KEY_TRAEFIK}
-      - traefik.http.middlewares.crowdsec-bouncer.plugin.bouncer.crowdsecLapiHost=crowdsec:8080
-      - traefik.http.middlewares.crowdsec-bouncer.plugin.bouncer.crowdsecLapiScheme=http
-      - traefik.http.middlewares.crowdsec-bouncer.plugin.bouncer.forwardedHeadersTrustedIPs=172.18.0.0/24,172.19.0.0/24
-      - traefik.http.middlewares.crowdsec-bouncer.plugin.bouncer.clientTrustedIPs=172.18.0.0/24,172.19.0.0/24
-      - traefik.http.middlewares.crowdsec-bouncer.plugin.bouncer.crowdsecLapiTimeout=5s
-      - traefik.http.middlewares.crowdsec-bouncer.plugin.bouncer.crowdsecLapiRetryInterval=1s
-      - traefik.http.middlewares.crowdsec-bouncer.plugin.bouncer.crowdsecLapiMaxRetries=3
+      # ---------- CROWDSEC BOUNCER ----------
+      # - traefik.http.middlewares.bouncer.plugin.bouncer.enabled=true
+      # - traefik.http.middlewares.bouncer.plugin.bouncer.mode=live
+      # - traefik.http.middlewares.bouncer.plugin.bouncer.logLevel=INFO
+      # - traefik.http.middlewares.bouncer.plugin.bouncer.updateIntervalSeconds=10
+      # - traefik.http.middlewares.bouncer.plugin.bouncer.updateMaxFailure=3
+      # - traefik.http.middlewares.bouncer.plugin.bouncer.defaultDecisionSeconds=10
+      # - traefik.http.middlewares.bouncer.plugin.bouncer.httpTimeoutSeconds=5
+      # - traefik.http.middlewares.bouncer.plugin.bouncer.crowdsecMode=stream
+      # - traefik.http.middlewares.bouncer.plugin.bouncer.crowdsecAppsecEnabled=true
+      # - traefik.http.middlewares.bouncer.plugin.bouncer.crowdsecAppsecFailureBlock=true
+      # - traefik.http.middlewares.bouncer.plugin.bouncer.crowdsecAppsecUnreachableBlock=false
+      # - traefik.http.middlewares.bouncer.plugin.bouncer.crowdsecAppsecHost=crowdsec:7422
+      # - traefik.http.middlewares.bouncer.plugin.bouncer.crowdsecLapiKey=${CROWDSEC_API_KEY_TRAEFIK}
+      # - traefik.http.middlewares.bouncer.plugin.bouncer.crowdsecLapiHost=crowdsec:8080
+      # - traefik.http.middlewares.bouncer.plugin.bouncer.crowdsecLapiScheme=http
+      # - traefik.http.middlewares.bouncer.plugin.bouncer.forwardedHeadersTrustedIPs=172.18.0.0/24,172.19.0.0/24
+      # - traefik.http.middlewares.bouncer.plugin.bouncer.clientTrustedIPs=172.18.0.0/24,172.19.0.0/24
+      # - traefik.http.middlewares.bouncer.plugin.bouncer.crowdsecLapiTimeout=5s
+      # - traefik.http.middlewares.bouncer.plugin.bouncer.crowdsecLapiRetryInterval=1s
+      # - traefik.http.middlewares.bouncer.plugin.bouncer.crowdsecLapiMaxRetries=3
