--- a/docker-proxy/lampac/home/init.conf
+++ b/docker-proxy/lampac/home/init.conf
@@ -68,10 +68,13 @@
     }
   ],
   "tmdb": {
-    "DNS": null,
-    "API_IP": "",
-    "IMG_IP": "",
-    "useproxy": true
+    "useproxy": true,
+    "proxy": {
+      "list": [
+        "socks5://warp:1080",
+        "socks5://tor-proxy:9150"
+      ]
+    }
   },
   "cub": {
     "enable": true,
@@ -88,17 +91,30 @@
     "enable": true
   },
   "multiaccess": true,
-  "cache": {  
-    "type": "mem"  
-  },  
   "GC": {
-    "ConserveMemory": 9,  
-    "HighMemoryPercent": 1  
-  },  
-  "fileCacheInactive": {  
-    "hls": 30,  
-    "html": 3,  
-    "torrent": 720  
+    "ConserveMemory": 9,
+    "HighMemoryPercent": 1
   },
-  "corsehost": "http://cors.apn.monster"
+  "fileCacheInactive": {
+    "hls": 30,
+    "html": 3,
+    "torrent": 720
+  },
+  "corsehost": "http://cors.apn.monster",
+  "RutubeMovie": {
+    "streamproxy": false
+  },
+  "Kinoukr": {
+    "enable": false
+  },
+  "Ashdi": {
+    "enable": false
+  },
+  "Eneyida": {
+    "enable": false
+  },
+  "sisi": {
+    "enable": false,
+    "lgbt": false
+  }
 }
