--- a/docker-proxy/lampac/module/manifest.json
+++ b/docker-proxy/lampac/module/manifest.json
@@ -5,7 +5,7 @@
     },
     {
         "dll": "SISI.dll",
-        "enable": true
+        "enable": false
     },
     {
         "dll": "JacRed.dll",
