--- a/docker-proxy/lampac/home/init.conf
+++ b/docker-proxy/lampac/home/init.conf
@@ -65,6 +65,11 @@
       ],
       "actions": null,
       "actions_attempts": 6
+    },
+    {  
+      "name": "github",  
+      "pattern": "github\\.com|raw\\.githubusercontent\\.com",  
+      "list": ["socks5://warp:1080"]  
     }
   ],
   "tmdb": {
