--- a/docker-proxy/compose.d/10-adguard.yml
+++ b/docker-proxy/compose.d/10-adguard.yml
@@ -52,17 +52,19 @@ services:
       - traefik.http.middlewares.rate-limit.ratelimit.average=50
       - traefik.http.middlewares.rate-limit.ratelimit.burst=100
       - traefik.http.middlewares.compress.compress=true
+      - traefik.http.middlewares.adguard-basic-auth.basicauth.users=${HT_PASS_ENCODED}
+      - traefik.http.middlewares.adguard-basic-auth.basicauth.realm=AdGuardHome
 
       # Редирект: добавляем префикс /${URI_ADGUARD_PANEL} к Location
-      - traefik.http.middlewares.redirect-adguard-panel.plugin.traefik-plugin-rewrite-headers.rewrites.0.header=Location
-      - traefik.http.middlewares.redirect-adguard-panel.plugin.traefik-plugin-rewrite-headers.rewrites.0.regex=^/(.*)
-      - traefik.http.middlewares.redirect-adguard-panel.plugin.traefik-plugin-rewrite-headers.rewrites.0.replacement=/${URI_ADGUARD_PANEL}/$1
+      - traefik.http.middlewares.redirect-adguard-panel.plugin.RewriteHeaders.rewrites.0.header=Location
+      - traefik.http.middlewares.redirect-adguard-panel.plugin.RewriteHeaders.rewrites.0.regex=^/(.*)
+      - traefik.http.middlewares.redirect-adguard-panel.plugin.RewriteHeaders.rewrites.0.replacement=/${URI_ADGUARD_PANEL}/$1
 
       # Снятие префикса
       - traefik.http.middlewares.strip-adguard-prefix.stripPrefix.prefixes=/${URI_ADGUARD_PANEL}
 
       # Общая цепочка для AdGuard
-      - traefik.http.middlewares.adguard-chain.chain.middlewares=bouncer@file,strip-adguard-prefix,redirect-adguard-panel,compress
+      - traefik.http.middlewares.adguard-chain.chain.middlewares=bouncer@file,adguard-basic-auth,strip-adguard-prefix,redirect-adguard-panel,compress
 
       # Router
       - traefik.http.routers.adguard-panel.rule=Host(`${WEBDOMAIN}`) && PathPrefix(`/${URI_ADGUARD_PANEL}`)
