--- a/script/template/install.summary.template
+++ b/script/template/install.summary.template
@@ -19,8 +19,8 @@ SSH Access:
 
 Available Services (via Caddy reverse proxy):
 
-- Main site            : https://{{WEBDOMAIN}}
-- 3X-UI Web Panel      : https://{{WEBDOMAIN}}/{{URI_PANEL_PATH}}/
+- Homepage URL         : https://{{WEBDOMAIN}}/{{URI_HOMEPAGE}}/
+- 3X-UI Panel          : https://{{WEBDOMAIN}}/{{URI_PANEL_PATH}}/
+- AdGuard Home Panel   : https://{{WEBDOMAIN}}/{{URI_ADGUARD_PANEL}}/
+- Dozzle Logs          : https://{{WEBDOMAIN}}/{{URI_DOZZLE}}/
 - Traefik Dashboard    : https://{{WEBDOMAIN}}/{{URI_TRAEFIK_DASHBOARD}}/dashboard/#/
-- Dozzle Logs Viewer   : https://{{WEBDOMAIN}}/{{URI_DOZZLE}}/
-- AdGuard Home         : https://{{WEBDOMAIN}}/{{URI_ADGUARD_PANEL}}/
