--- a/script/template/99-xray-network.conf.template
+++ b/script/template/99-xray-network.conf.template
@@ -1,5 +1,3 @@
-#!/bin/bash
-
 ###############################################
 #     СЕТЕВЫЕ НАСТРОЙКИ + TCP BBR + ЗАЩИТА    #
 #     NETWORK SETTINGS + TCP BBR + SECURITY    #
@@ -40,7 +38,7 @@ fs.inotify.max_user_instances = 30000
 # 2. UDP буферы / UDP Buffers
 #############################
 
-net.ipv4.udp_mem      = 65536 131072 262144
+net.ipv4.udp_mem      = 3145728 4194304 6291456
 net.ipv4.udp_rmem_min = 8192
 net.ipv4.udp_wmem_min = 8192
 
@@ -51,8 +49,8 @@ net.ipv4.udp_wmem_min = 8192
 net.ipv4.tcp_rfc1337             = 1
 net.ipv4.tcp_low_latency         = 1
 net.ipv4.tcp_max_syn_backlog     = 30000
-net.ipv4.tcp_tw_reuse            = 1
-net.ipv4.tcp_fin_timeout         = 10
+# net.ipv4.tcp_tw_reuse            = 1
+net.ipv4.tcp_fin_timeout         = 15
 net.ipv4.tcp_syn_retries         = 2
 net.ipv4.tcp_synack_retries      = 2
 net.ipv4.tcp_keepalive_time      = 600
@@ -62,12 +60,12 @@ net.ipv4.tcp_mtu_probing         = 2
 net.ipv4.tcp_fastopen            = 3
 net.ipv4.tcp_slow_start_after_idle = 0
 net.ipv4.tcp_sack                = 1
-net.ipv4.tcp_timestamps          = 0
+net.ipv4.tcp_timestamps          = 1
 net.ipv4.tcp_window_scaling      = 1
 net.ipv4.tcp_moderate_rcvbuf     = 1
 net.ipv4.tcp_ecn                 = 1
 net.ipv4.tcp_max_tw_buckets      = 15000
-net.ipv4.tcp_no_metrics_save     = 1
+net.ipv4.tcp_no_metrics_save     = 0
 net.ipv4.tcp_rmem                = 4096 87380 16777216
 net.ipv4.tcp_wmem                = 4096 65536 16777216
 
@@ -86,6 +84,7 @@ net.netfilter.nf_conntrack_tcp_timeout_fin_wait     = 60
 #############################
 
 net.ipv4.tcp_syncookies              = 1
+net.ipv4.icmp_echo_ignore_all        = 0
 net.ipv4.icmp_echo_ignore_broadcasts = 1
 net.ipv4.icmp_ratelimit              = 1
 net.ipv4.conf.all.rp_filter          = 1
@@ -96,7 +95,6 @@ net.ipv4.conf.all.accept_redirects        = 0
 net.ipv4.conf.default.accept_redirects    = 0
 net.ipv4.conf.all.secure_redirects        = 0
 net.ipv4.conf.default.secure_redirects    = 0
-net.ipv4.icmp_echo_ignore_all        = 1
 
 #############################
 # 6. ARP фильтрация / ARP Filtering
